--- a/packages/injective-std/Cargo.toml
+++ b/packages/injective-std/Cargo.toml
@@ -20,7 +20,7 @@ cosmwasm-std = { version = "2.1.0", features = [
   "iterator",
   "stargate",
 ] }
-injective-std-derive = { version = "1.13.0" }
+injective-std-derive = { path = "../injective-std-derive" }
 prost = { version = "0.13", features = ["prost-derive"] }
 prost-types = { version = "0.13", default-features = false }
 schemars = "0.8.8"
